# churnshield

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
config/: model_config.yaml
dashboard/: app.py
data/: download.py  sample_batch.csv
docs/: ChurnShield_Solution_Design_v2.docx  model_card.md
src/: api.py  evaluation.py  features.py  monitoring.py  predict.py  preprocessing.py  schemas.py  training.py
tests/: test_api.py  test_features.py  test_health.py  test_preprocessing.py  test_quality_gate.py  test_training.py
