[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churnshield"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "optuna==3.6.1",
    "shap==0.45.0",
    "streamlit==1.35.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "lightgbm==4.3.0",
    "catboost==1.2.5",
    "plotly==5.22.0",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pre-commit==3.7.1",
    "httpx==0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "app"]
omit = ["tests/*"]
